--- a/Extraction_Of_Tweets.ipynb
+++ b/Extraction_Of_Tweets.ipynb
@@ -31,23 +31,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec759bd3-4c63-413a-da78-1a8bccb08126"
+        "outputId": "c9cf3c7f-3c00-40aa-9f48-ba381d98366d"
       },
       "source": [
         "!pip install tweepy\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: tweepy in /usr/local/lib/python3.7/dist-packages (3.10.0)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.15.0)\n",
             "Requirement already satisfied: requests[socks]>=2.11.1 in /usr/local/lib/python3.7/dist-packages (from tweepy) (2.23.0)\n",
             "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.3.0)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.15.0)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (3.0.4)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2020.12.5)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.24.3)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2.10)\n",
             "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6; extra == \"socks\" in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.7.1)\n",
             "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->tweepy) (3.1.0)\n"
@@ -59,7 +59,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HOm32ru60ASH"
+        "id": "HOm32ru60ASH",
+        "outputId": "b5a5d938-a9fe-4fe9-cdd5-6473d880df2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Extracting twitter data using Twitter API\n",
@@ -93,40 +97,36 @@
         "    \n",
         "scraping_twitter(api_key, api_secret, access_token, access_secret)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter twitter consumer api key :  ··········\n",
+            "Enter twitter consumer api secret key :  ··········\n",
+            "Enter twitter access token  :  ··········\n",
+            "Enter twitter access secret token :  ··········\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "pO0axMmKQ9Nt",
+        "outputId": "d1f9c490-3319-4f2e-de55-f3dacd91b770",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
-        },
-        "id": "XbeTYCudob1m",
-        "outputId": "1b41b7cc-9df2-497d-b87c-3df66e8d1387"
+          "height": 691
+        }
       },
       "source": [
-        "\n",
-        "# We have fetched 10000 records per one user API request. \n",
-        "# Having three files as #CovidVaccine1.csv, #CovidVaccine2.csv, #CovidVaccine3.csv\n",
-        "# Concatinating them to one single file as #CovidVaccine.csv\n",
-        "\n",
-        "import os\n",
-        "import glob\n",
         "import pandas as pd\n",
-        "os.chdir(\"/content\")\n",
-        "\n",
-        "extension = 'csv'\n",
-        "all_filenames = [i for i in glob.glob('*.{}'.format(extension))]\n",
-        "\n",
-        "#combine all files in the list\n",
-        "dataFrame = pd.concat([pd.read_csv(f) for f in all_filenames ])\n",
-        "#export to csv\n",
-        "dataFrame.to_csv( \"CovidVaccine.csv\", index=False, encoding='utf-8-sig')\n",
-        "dataFrame\n"
+        "df=pd.read_csv(r\"CovidVaccine.csv\")\n",
+        "df"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,43 +160,43 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>2021-03-17 23:59:34</td>\n",
-              "      <td>The only way #COVID19 can mutate with variants...</td>\n",
-              "      <td>kemsunde</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>['COVID19', 'CovidVaccine', 'GetTheFactsGetThe...</td>\n",
+              "      <td>2021-03-25 23:59:57</td>\n",
+              "      <td>Stay away from the Sinovac vaccine. It is unsa...</td>\n",
+              "      <td>trekker_william</td>\n",
+              "      <td>Southwest</td>\n",
+              "      <td>['Sinovac', 'ChinaLies', 'CovidVaccine', 'Sino...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>2021-03-17 23:59:20</td>\n",
-              "      <td>I've now officially had my 1st dose of the #Co...</td>\n",
-              "      <td>ManeckiN</td>\n",
-              "      <td>The Wild Western Wastes</td>\n",
-              "      <td>['CovidVaccine', 'COVID19', 'PfizerVaccine', '...</td>\n",
+              "      <td>2021-03-25 23:59:53</td>\n",
+              "      <td>V-A-C-C-I-N-A-T-E-D!!! 💁🏽‍♀️💉❤️😷 #COVID #coron...</td>\n",
+              "      <td>ashlydhorace</td>\n",
+              "      <td>TX ✈️CA☀️</td>\n",
+              "      <td>['COVID', 'coronavirus', 'CoronaVaccine', 'Joh...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2021-03-17 23:58:31</td>\n",
-              "      <td>@hendopolis Imagine if the #Brexit referendum ...</td>\n",
-              "      <td>raymasseytweets</td>\n",
-              "      <td>England, United Kingdom</td>\n",
-              "      <td>['Brexit', 'EU', 'TrueColours', 'Impfstoff', '...</td>\n",
+              "      <td>2021-03-25 23:59:51</td>\n",
+              "      <td>RT @Cal_OES: 🚨ALERT!!🚨More Californians will s...</td>\n",
+              "      <td>SantaMonicaLibr</td>\n",
+              "      <td>Santa Monica, CA</td>\n",
+              "      <td>['CovidVaccine', 'VaccinesWork', 'VaccineEquity']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2021-03-17 23:58:03</td>\n",
-              "      <td>@EICostheta @RicBarraArch1 @insiders Yep. The ...</td>\n",
-              "      <td>MikeFitzAU</td>\n",
-              "      <td>Mudjimba, Qld, Australia</td>\n",
-              "      <td>['LiarsNParasites', 'CovidVaccine']</td>\n",
+              "      <td>2021-03-25 23:59:48</td>\n",
+              "      <td>RT @THP_hospital: Pharmacy Technicians have be...</td>\n",
+              "      <td>PhmSonia</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>['COVID19vaccine']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>2021-03-17 23:57:37</td>\n",
-              "      <td>This sounds like an important topic for @NickS...</td>\n",
-              "      <td>stephjantzen</td>\n",
-              "      <td>Greater Sacramento, California</td>\n",
-              "      <td>['FiresideChat', 'CovidVaccine']</td>\n",
+              "      <td>2021-03-25 23:59:32</td>\n",
+              "      <td>RT @MaryLTrump: It's been a long fucking year....</td>\n",
+              "      <td>102415A</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>['KrispyKreme', 'vaccinated']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -208,70 +208,70 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9995</th>\n",
-              "      <td>2021-03-21 04:30:51</td>\n",
-              "      <td>RT @governancenow: #testing mandatory in publi...</td>\n",
-              "      <td>geeminhas</td>\n",
-              "      <td>Mumbai</td>\n",
-              "      <td>['testing', 'Mumbai', 'secondwave']</td>\n",
+              "      <td>2021-03-25 10:32:52</td>\n",
+              "      <td>RT @NHSAbility: Read about work with #FamilyCa...</td>\n",
+              "      <td>marybusk</td>\n",
+              "      <td>London, England</td>\n",
+              "      <td>['FamilyCarers', 'LearningDisability']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9996</th>\n",
-              "      <td>2021-03-21 04:30:47</td>\n",
-              "      <td>@Jamienzherald brilliantly summarises and prov...</td>\n",
-              "      <td>JTThaker</td>\n",
-              "      <td>Was, DC, Singap, New Zealand, India</td>\n",
-              "      <td>['vaccine', 'hesitancy', 'COVID19Vaccine', 'Ne...</td>\n",
+              "      <td>2021-03-25 10:32:52</td>\n",
+              "      <td>RT @Angeliccutie19: There is sufficient vaccin...</td>\n",
+              "      <td>Dena644</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>['vaccinated', 'Corona', 'COVIDー19']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9997</th>\n",
-              "      <td>2021-03-21 04:30:40</td>\n",
-              "      <td>One year Anniversary  Happy #jantacurfew 2020 ...</td>\n",
-              "      <td>MyloMegha</td>\n",
-              "      <td>Fantasy World (Indore) MP</td>\n",
-              "      <td>['jantacurfew', 'COVID19Vaccine']</td>\n",
+              "      <td>2021-03-25 10:32:48</td>\n",
+              "      <td>RT @MaryLTrump: It's been a long fucking year....</td>\n",
+              "      <td>LindaMStaples</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>['KrispyKreme', 'vaccinated']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9998</th>\n",
-              "      <td>2021-03-21 04:30:32</td>\n",
-              "      <td>RT @CameroonReport1: Cameroon Approves Russian...</td>\n",
-              "      <td>oncle_benoit</td>\n",
-              "      <td>Bois-Colombes, France</td>\n",
-              "      <td>['CameroonReport', 'Cameroon', 'COVID19Vaccine...</td>\n",
+              "      <td>2021-03-25 10:32:47</td>\n",
+              "      <td>RT @DrMercyKorir: New @MOH_Kenya directive: If...</td>\n",
+              "      <td>mwanambeyu</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>['Covid19Vaccine']</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9999</th>\n",
-              "      <td>2021-03-21 04:30:32</td>\n",
-              "      <td>RT @HailMarxism: It's easy when you have rich ...</td>\n",
-              "      <td>Budsmu1</td>\n",
-              "      <td>Wurundjeri Country, Vic OZ</td>\n",
+              "      <td>2021-03-25 10:32:36</td>\n",
+              "      <td>RT @DrWilfredoM: 1/ I signed this petition fro...</td>\n",
+              "      <td>BrighamMedRes</td>\n",
+              "      <td>Boston, MA</td>\n",
               "      <td>[]</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>120405 rows × 5 columns</p>\n",
+              "<p>10000 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
               "                TweetDate  ...                                        AllHashtags\n",
-              "0     2021-03-17 23:59:34  ...  ['COVID19', 'CovidVaccine', 'GetTheFactsGetThe...\n",
-              "1     2021-03-17 23:59:20  ...  ['CovidVaccine', 'COVID19', 'PfizerVaccine', '...\n",
-              "2     2021-03-17 23:58:31  ...  ['Brexit', 'EU', 'TrueColours', 'Impfstoff', '...\n",
-              "3     2021-03-17 23:58:03  ...                ['LiarsNParasites', 'CovidVaccine']\n",
-              "4     2021-03-17 23:57:37  ...                   ['FiresideChat', 'CovidVaccine']\n",
+              "0     2021-03-25 23:59:57  ...  ['Sinovac', 'ChinaLies', 'CovidVaccine', 'Sino...\n",
+              "1     2021-03-25 23:59:53  ...  ['COVID', 'coronavirus', 'CoronaVaccine', 'Joh...\n",
+              "2     2021-03-25 23:59:51  ...  ['CovidVaccine', 'VaccinesWork', 'VaccineEquity']\n",
+              "3     2021-03-25 23:59:48  ...                                 ['COVID19vaccine']\n",
+              "4     2021-03-25 23:59:32  ...                      ['KrispyKreme', 'vaccinated']\n",
               "...                   ...  ...                                                ...\n",
-              "9995  2021-03-21 04:30:51  ...                ['testing', 'Mumbai', 'secondwave']\n",
-              "9996  2021-03-21 04:30:47  ...  ['vaccine', 'hesitancy', 'COVID19Vaccine', 'Ne...\n",
-              "9997  2021-03-21 04:30:40  ...                  ['jantacurfew', 'COVID19Vaccine']\n",
-              "9998  2021-03-21 04:30:32  ...  ['CameroonReport', 'Cameroon', 'COVID19Vaccine...\n",
-              "9999  2021-03-21 04:30:32  ...                                                 []\n",
+              "9995  2021-03-25 10:32:52  ...             ['FamilyCarers', 'LearningDisability']\n",
+              "9996  2021-03-25 10:32:52  ...               ['vaccinated', 'Corona', 'COVIDー19']\n",
+              "9997  2021-03-25 10:32:48  ...                      ['KrispyKreme', 'vaccinated']\n",
+              "9998  2021-03-25 10:32:47  ...                                 ['Covid19Vaccine']\n",
+              "9999  2021-03-25 10:32:36  ...                                                 []\n",
               "\n",
-              "[120405 rows x 5 columns]"
+              "[10000 rows x 5 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     }
