--- a/Concatinate_tweets.ipynb
+++ b/Concatinate_tweets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNn4I1ySnvL0Tb7Nd4wXgjh",
+      "authorship_tag": "ABX9TyPZ8fGIULxEjOyMHpDvXhQ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,10 +53,10 @@
         "#combine all files in the list\n",
         "dataFrame = pd.concat([pd.read_csv(f) for f in all_filenames ])\n",
         "#export to csv\n",
-        "dataFrame.to_csv( \"CovidVaccineWorld.csv\", index=False, encoding='utf-8-sig')\n",
+        "dataFrame.to_csv( \"CovidVaccineWorldWide.csv\", index=False, encoding='utf-8-sig')\n",
         "dataFrame\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
