--- a/Concatinate_tweets.ipynb
+++ b/Concatinate_tweets.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZ8fGIULxEjOyMHpDvXhQ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,10 +31,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 966
+          "height": 657
         },
         "id": "N2szbR13NUCk",
-        "outputId": "6bafc608-8680-42a6-cc75-1675e5dc8fdc"
+        "outputId": "e4996ca0-ec8a-4bed-f139-f007fb56bd59"
       },
       "source": [
         "# We have fetched 10000 records per one user API request. \n",
@@ -56,7 +55,7 @@
         "dataFrame.to_csv( \"CovidVaccineWorldWide.csv\", index=False, encoding='utf-8-sig')\n",
         "dataFrame\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,52 +92,52 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>0</td>\n",
-              "      <td>2021-03-17 23:59:34</td>\n",
-              "      <td>The only way #COVID19 can mutate with variants...</td>\n",
-              "      <td>kemsunde</td>\n",
-              "      <td>Unknown</td>\n",
-              "      <td>['COVID19', 'CovidVaccine', 'GetTheFactsGetThe...</td>\n",
+              "      <td>2021-03-19 23:59:49</td>\n",
+              "      <td>RT @NYGH_News: NYGH and @NYTHP are now booking...</td>\n",
+              "      <td>r_crawford</td>\n",
+              "      <td>iPhone: 43.654922,-79.377864</td>\n",
+              "      <td>['COVID19Vaccine']</td>\n",
               "      <td>Unknown</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>1</td>\n",
-              "      <td>2021-03-17 23:59:20</td>\n",
-              "      <td>I've now officially had my 1st dose of the #Co...</td>\n",
-              "      <td>ManeckiN</td>\n",
-              "      <td>The Wild Western Wastes</td>\n",
-              "      <td>['CovidVaccine', 'COVID19', 'PfizerVaccine', '...</td>\n",
-              "      <td>Unknown</td>\n",
+              "      <td>2021-03-19 23:59:26</td>\n",
+              "      <td>COVID-19 ‘Vaccines’ Are #GeneTherapy, by Josep...</td>\n",
+              "      <td>judymorris3</td>\n",
+              "      <td>Delaware</td>\n",
+              "      <td>['GeneTherapy', 'COVIDVaccine', 'mRNA']</td>\n",
+              "      <td>United States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>2</td>\n",
-              "      <td>2021-03-17 23:58:31</td>\n",
-              "      <td>@hendopolis Imagine if the #Brexit referendum ...</td>\n",
-              "      <td>raymasseytweets</td>\n",
-              "      <td>England</td>\n",
-              "      <td>['Brexit', 'EU', 'TrueColours', 'Impfstoff', '...</td>\n",
-              "      <td>United Kingdom</td>\n",
+              "      <td>2021-03-19 23:58:45</td>\n",
+              "      <td>Milestone met.\\n\\n#COVID19 #CovidVaccine #100m...</td>\n",
+              "      <td>POW_Vote</td>\n",
+              "      <td>Women of the World-NC Chapter</td>\n",
+              "      <td>['COVID19', 'CovidVaccine', '100million']</td>\n",
+              "      <td>Unknown</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>3</td>\n",
-              "      <td>2021-03-17 23:58:03</td>\n",
-              "      <td>@EICostheta @RicBarraArch1 @insiders Yep. The ...</td>\n",
-              "      <td>MikeFitzAU</td>\n",
-              "      <td>Mudjimba</td>\n",
-              "      <td>['LiarsNParasites', 'CovidVaccine']</td>\n",
-              "      <td>Australia</td>\n",
+              "      <td>2021-03-19 23:58:38</td>\n",
+              "      <td>RT @DrEricDing: This is a horrible horrible ga...</td>\n",
+              "      <td>mmadeira</td>\n",
+              "      <td>Porto Velho- Rondônia</td>\n",
+              "      <td>[]</td>\n",
+              "      <td>Brazil</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>4</td>\n",
-              "      <td>2021-03-17 23:57:37</td>\n",
-              "      <td>This sounds like an important topic for @NickS...</td>\n",
-              "      <td>stephjantzen</td>\n",
-              "      <td>Greater Sacramento</td>\n",
-              "      <td>['FiresideChat', 'CovidVaccine']</td>\n",
-              "      <td>Brazil</td>\n",
+              "      <td>2021-03-19 23:58:18</td>\n",
+              "      <td>2. #CovidVaccine $PFE, $BION, $MRNA, $JNJ, $AZ...</td>\n",
+              "      <td>nramanuja</td>\n",
+              "      <td>several</td>\n",
+              "      <td>['CovidVaccine']</td>\n",
+              "      <td>Romania</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -153,79 +152,79 @@
               "    <tr>\n",
               "      <th>9995</th>\n",
               "      <td>9995</td>\n",
-              "      <td>2021-03-20 06:46:31</td>\n",
-              "      <td>RT @dochelmy: What changes once you're fully v...</td>\n",
-              "      <td>thaqifmahadi</td>\n",
-              "      <td>Sg Petani | Penang | Batu Cave</td>\n",
-              "      <td>['COVID19Vaccine']</td>\n",
+              "      <td>2021-03-25 10:46:15</td>\n",
+              "      <td>RT @MaryLTrump: It's been a long fucking year....</td>\n",
+              "      <td>bsilver102254</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>['KrispyKreme', 'vaccinated']</td>\n",
               "      <td>Unknown</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9996</th>\n",
               "      <td>9996</td>\n",
-              "      <td>2021-03-20 06:46:28</td>\n",
-              "      <td>RT @mygovindia: Testing will play a crucial ro...</td>\n",
-              "      <td>Arjun__Pandit_</td>\n",
+              "      <td>2021-03-25 10:46:14</td>\n",
+              "      <td>RT @MaryLTrump: It's been a long fucking year....</td>\n",
+              "      <td>GqpSlayer</td>\n",
               "      <td>Unknown</td>\n",
-              "      <td>['COVID19']</td>\n",
+              "      <td>['KrispyKreme', 'vaccinated']</td>\n",
               "      <td>Unknown</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9997</th>\n",
               "      <td>9997</td>\n",
-              "      <td>2021-03-20 06:46:22</td>\n",
-              "      <td>RT @mygovindia: #COVIDVaccine is &amp;amp; will ce...</td>\n",
-              "      <td>Arjun__Pandit_</td>\n",
-              "      <td>Unknown</td>\n",
-              "      <td>['COVIDVaccine', 'COVID19']</td>\n",
-              "      <td>Unknown</td>\n",
+              "      <td>2021-03-25 10:46:13</td>\n",
+              "      <td>RT @MaryLTrump: It's been a long fucking year....</td>\n",
+              "      <td>mcshap</td>\n",
+              "      <td>Troy</td>\n",
+              "      <td>['KrispyKreme', 'vaccinated']</td>\n",
+              "      <td>Turkey</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9998</th>\n",
               "      <td>9998</td>\n",
-              "      <td>2021-03-20 06:45:26</td>\n",
-              "      <td>RT @mix_atlanta: 19th &amp;amp; 22nd:  FBI Warns P...</td>\n",
-              "      <td>cybersec_feeds</td>\n",
-              "      <td>Internet</td>\n",
-              "      <td>[]</td>\n",
-              "      <td>Haiti</td>\n",
+              "      <td>2021-03-25 10:46:11</td>\n",
+              "      <td>Latest @MOH_Kenya\\n directive: If you are 58 a...</td>\n",
+              "      <td>MakauWaMuli</td>\n",
+              "      <td>Nairobi</td>\n",
+              "      <td>['Covid19Vaccine', 'MaskUp', 'Sanitise', 'Dist...</td>\n",
+              "      <td>Kenya</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9999</th>\n",
               "      <td>9999</td>\n",
-              "      <td>2021-03-20 06:45:11</td>\n",
-              "      <td>RT @GalitPeleg: After 10 days in quarantine, 2...</td>\n",
-              "      <td>StarColombo</td>\n",
-              "      <td>Unknown</td>\n",
-              "      <td>[]</td>\n",
-              "      <td>Unknown</td>\n",
+              "      <td>2021-03-25 10:46:07</td>\n",
+              "      <td>At his first vaccine appointment, they advised...</td>\n",
+              "      <td>The_Nadz1</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>['CovidVaccine']</td>\n",
+              "      <td>United Kingdom</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>126250 rows × 7 columns</p>\n",
+              "<p>206250 rows × 7 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
               "     Unnamed: 0  ...         Country\n",
               "0             0  ...         Unknown\n",
-              "1             1  ...         Unknown\n",
-              "2             2  ...  United Kingdom\n",
-              "3             3  ...       Australia\n",
-              "4             4  ...          Brazil\n",
+              "1             1  ...   United States\n",
+              "2             2  ...         Unknown\n",
+              "3             3  ...          Brazil\n",
+              "4             4  ...         Romania\n",
               "...         ...  ...             ...\n",
               "9995       9995  ...         Unknown\n",
               "9996       9996  ...         Unknown\n",
-              "9997       9997  ...         Unknown\n",
-              "9998       9998  ...           Haiti\n",
-              "9999       9999  ...         Unknown\n",
+              "9997       9997  ...          Turkey\n",
+              "9998       9998  ...           Kenya\n",
+              "9999       9999  ...  United Kingdom\n",
               "\n",
-              "[126250 rows x 7 columns]"
+              "[206250 rows x 7 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 1
         }
       ]
     }
